--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
-/*style goes here*/
+section {
+    padding: 50px;
+}
+div {
+padding: 25px;
+}
+h1 {
+    font-size: 48px;
+    text-align: center;
+}
+h2 {
+    font-size: 24px;
+    margin-left: 75px;
+    text-decoration: underline;
+}
+p {
+    font-size: 32px;
+    padding: 50px;
+    text-align: center;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
